# colonel

./: .gitignore  boot.asm  boot.s  gdt.h  gdt.s  meson.build  tty.c  vga.c  vga.h
asm/: gdt.asm  gdt.mac  isr.asm  isr.mac  meson.build  ports.asm
include/: control.h  controller.h  gdt.h  idt.h  isr.h  kb.h  kernel.h  kprintf.h  meson.build  ports.h  printk.h  string.h  timer.h  vga.h
kernel/: control.c  controller.c  gdt.c  gdt.s  halt.asm  halt.s  idt.c  init.c  isr.asm  isr.c  isr.s  kb.c  kernel.c  kprintf.c  meson.build  printk.c  string.c  timer.c  vga.c  vga.h
libc/: meson.build  stdio.c  stdio.h  string.c  string.h
tests/: exec.ld  input.c  meson.build  print.c  tty.c
